# conventional-pre-commit

./: .pre-commit-config.yaml  pyproject.  pyproject.toml
conventional_pre_commit/: hook.py
